--- a/src/modules/scheduling/css/sessionModal.scss
+++ b/src/modules/scheduling/css/sessionModal.scss
@@ -258,7 +258,7 @@ and (max-device-width : 667px) {
     [state^="scheduling"] {
         .session-modal{     
              .session-form{
-                height: calc(100vh - 350px);            
+                height: calc(100vh - 370px);            
             }
         }    
     }
@@ -271,7 +271,7 @@ and (max-device-width : 736px) {
     [state^="scheduling"] {
         .session-modal{     
              .session-form{
-                height: calc(100vh - 350px);            
+                height: calc(100vh - 370px);            
             }
         }    
     }
@@ -284,7 +284,7 @@ and (max-device-width : 568px) {
     [state^="scheduling"] {
         .session-modal{     
              .session-form{
-                height: calc(100vh - 350px);            
+                height: calc(100vh - 370px);            
             }
         }    
     }
@@ -297,11 +297,27 @@ and (max-device-width : 480px) {
     [state^="scheduling"] {
         .session-modal{     
              .session-form{
-                height: calc(100vh - 350px);            
+                height: calc(100vh - 370px);            
             }
         }    
     }
 }
+
+// iPad in portrait
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait) { 
+    [state^="scheduling"] {
+        .session-modal{
+            .session-form{
+                height: calc(100vh - 340px);
+            }
+        }
+    }
+
+}
+
 
 /*Ipad Landscape*/
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
